# docker_streamlit_app

./: .pre-commit-config.yaml  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
backend/: database.py
docs/: index.md  p2-database.md  p3-app.md  p4-tests.md
frontend/: app.py  requirements.txt
p2-database/: index.html
p3-app/: index.html
p4-tests/: index.html
search/: search_index.json
src/: Dockerfile  app.py  database.py
tests/: __init__.py  test_app.py
