[tool.poetry]
name = "docker-streamlit-app"
version = "0.1.0"
description = ""
authors = ["LucianoBorba <luhborbafilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.2"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.1"
mkdocs = "^1.5.3"
black = "^24.3.0"
isort = "^5.13.2"
pytest = "^8.1.1"
selenium = "^4.18.1"
pip-audit = "^2.7.2"
taskipy = "^1.12.2"
pydocstyle = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
